<resources>
    <string name="app_name">ExemploGavetaNavegacao</string>
    <string name="navigation_item_1">Opção 1</string>
    <string name="navigation_item_2">Opção 2</string>
    <string name="navigation_subheader">Subitens</string>
    <string name="navigation_sub_item_1">Opção 3.1</string>
    <string name="navigation_sub_item_2">Opção 3.2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configurações</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_camera">Camera</string>
</resources>
